# ENG_Fastapi

./: .gitignore  .pre-commit-config.yaml  README.md  auth.py  crud.py  main.py  models.py  pyproject.toml  render.yaml  requirements.txt
routes/: auth.py  users.py
templates/: index.html  script.js
