[tool.poetry]
name = "eng-fastapi"
version = "0.1.0"
description = ""
authors = ["Lucas Alves <lucasalves_taz@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.11"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
commitizen = "^4.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
